--- a/gagaga.html
+++ b/gagaga.html
@@ -17,6 +17,10 @@
       color: white;
     }
 
+    body {
+      overflow-y: hidden;
+    }
+
     #skorDisplay {
       position: absolute;
       top: 50%;
@@ -29,7 +33,7 @@
       text-align: center;
       white-space: nowrap;
       z-index: 2;
-      -webkit-text-stroke: 4px orange;
+	  -webkit-text-stroke: 4px orange; /* ketebalan dan warna stroke */
     }
 
     #starter {
@@ -48,7 +52,7 @@
       cursor: pointer;
     }
 
-    #ornamenContainer, #glowLayer {
+    #ornamenContainer {
       position: fixed;
       top: 0;
       left: 0;
@@ -58,17 +62,28 @@
       z-index: 10;
     }
 
-    .shake {
-      animation: shake 0.6s ease-in-out;
+    .ornamen {
+      position: absolute;
+      font-size: 24px;
+      animation: jatuh 2s linear forwards;
     }
 
-    @keyframes shake {
-      0% { transform: translate(0, 0); }
-      20% { transform: translate(-5px, 0); }
-      40% { transform: translate(5px, 0); }
-      60% { transform: translate(-5px, 0); }
-      80% { transform: translate(5px, 0); }
-      100% { transform: translate(0, 0); }
+    @keyframes jatuh {
+      0% { transform: translate(0, 0) rotate(0deg); opacity: 1; }
+      100% { transform: translate(var(--x), 100vh) rotate(var(--r)); opacity: 0; }
+    }
+
+    #glowLayer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 1;
+      opacity: 0;
+      background: radial-gradient(circle at center, rgba(255,255,255,0.6) 0%, transparent 70%);
+      animation: glowBurst 1s ease-out forwards;
     }
 
     @keyframes glowBurst {
@@ -85,64 +100,35 @@
       }
     }
 
-    #layoutWrapper {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      padding: 40px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
-      z-index: 5;
-      gap: 40px;
+    @keyframes shake {
+      0% { transform: translate(0, 0); }
+      20% { transform: translate(-5px, 0); }
+      40% { transform: translate(5px, 0); }
+      60% { transform: translate(-5px, 0); }
+      80% { transform: translate(5px, 0); }
+      100% { transform: translate(0, 0); }
     }
 
-    #leftColumn {
-      width: 40%;
-      max-width: 600px;
-      background-color: #f8f9fa;
-      color: #212529;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      font-size: 0.95em;
+    .shake {
+      animation: shake 0.6s ease-in-out;
     }
 
-    #rightColumn {
-      width: 55%;
-      height: 100%;
-      padding: 10px;
-    }
-
+    #instructions,
+    #shuffleBtn,
     #categoryContainer {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: 24px;
-      width: 100%;
-      height: 100%;
-      box-sizing: border-box;
+      display: none;
     }
 
     .category {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-size: 2em;
+      font-size: 0.9em;
       font-weight: bold;
-      padding: 24px;
-      border-radius: 16px;
+      padding: 12px;
+      border-radius: 10px;
       color: #fff;
-      height: 100%;
-      width: 100%;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      min-width: 120px;
+      max-width: 180px;
       word-wrap: break-word;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -153,31 +139,27 @@
   <div id="ornamenContainer"></div>
   <div id="glowLayer"></div>
 
-  <div id="layoutWrapper">
-    <div id="leftColumn">
-      <div id="instructions">
-        <h4 class="mb-3">Instructions</h4>
-        <ol class="fs-6">
-          <li>Once you click the <strong>Randomize</strong> button, 9 categories will appear on the screen.</li>
-          <li>The button may be used up to five times. Each participant is allowed to click it once.</li>
-          <li>You may select one category and will be asked up to three questions based on your choice.</li>
-          <li>If you feel your responses are not quite satisfying, you may select one additional category — without clicking the button again.</li>
-        </ol>
-      </div>
-      <button id="shuffleBtn" class="btn btn-primary mt-4">Randomize Category</button>
-      <button onclick="triggerSkor('85', 85)" class="btn btn-success mt-3">Tes Skor 85</button>
+  <div class="container-fluid vh-100 d-flex flex-column justify-content-center align-items-center">
+    <div id="instructions" class="bg-light text-dark p-4 rounded shadow" style="max-width: 600px;">
+      <h4 class="mb-3">Instructions</h4>
+      <ol class="fs-6">
+        <li>Once you click the <strong>Randomize</strong> button, 9 categories will appear on the screen.</li>
+        <li>The button may be used up to five times. Each participant is allowed to click it once.</li>
+        <li>You may select one category and will be asked up to three questions based on your choice.</li>
+        <li>If you feel your responses are not quite satisfying, you may select one additional category — without clicking the button again.</li>
+      </ol>
     </div>
 
-    <div id="rightColumn">
-      <div id="categoryContainer"></div>
-    </div>
+    <button id="shuffleBtn" class="btn btn-primary mt-4">Randomize Category</button>
+
+    <div id="categoryContainer" class="d-flex flex-wrap justify-content-center align-items-center mt-4 gap-3" style="max-width: 800px;"></div>
   </div>
 
   <audio id="niceTry" src="https://yogaptek.github.io/suara/drum-roll-and-cymbals.mp3" preload="auto"></audio>
   <audio id="notBad" src="https://assets.mixkit.co/sfx/download/mixkit-game-notification-wave-2314.mp3" preload="auto"></audio>
   <audio id="goodJob" src="https://assets.mixkit.co/sfx/download/mixkit-achievement-bell-600.mp3" preload="auto"></audio>
   <audio id="applause" src="https://assets.mixkit.co/sfx/download/mixkit-small-crowd-applause-503.mp3" preload="auto"></audio>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   <script>
@@ -330,23 +312,24 @@
     const container = document.getElementById("categoryContainer");
 
     function shuffleAndDisplay() {
-      container.innerHTML = "";
-      const shuffled = americanCategories.sort(() => 0.5 - Math.random()).slice(0, 9);
-      shuffled.forEach((cat, index) => {
-        const div = document.createElement("div");
-        div.className = "category";
-        div.textContent = cat;
-        div.style.backgroundColor = colors[index % colors.length];
-        container.appendChild(div);
-      });
+    container.innerHTML = "";
+    const shuffled = americanCategories.sort(() => 0.5 - Math.random()).slice(0, 9);
+    shuffled.forEach((cat, index) => {
+      const div = document.createElement("div");
+      div.className = "category";
+      div.textContent = cat;
+      div.style.backgroundColor = colors[index % colors.length];
+      container.appendChild(div);
+    });
 
-      clickCount++;
-      if (clickCount >= maxClicks) {
-        shuffleBtn.disabled = true;
-      }
+    clickCount++;
+    if (clickCount >= maxClicks) {
+      shuffleBtn.disabled = true;
     }
+  }
 
-    shuffleBtn.addEventListener("click", shuffleAndDisplay);
+  shuffleBtn.addEventListener("click", shuffleAndDisplay);
+
   </script>
 
 </body>
